--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
+    "favicons": "^7.1.0",
+    "favicons-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "2.8.4",
     "style-loader": "^3.3.1",
